Fix ad hoc setting overrides

--- a/tests/header.html
+++ b/tests/header.html
@@ -1,13 +1,13 @@
 <div class="special">INSERTED!</div>
 
 <header>
-    <h2 data-mf_bind="store1->innerText" data-mf_sync="on(click) (innerText)=> alert(innerText)">Default header</h2>
+    <h2 data-mf_bind="$st.store1->$el.innerText" data-mf_sync="on(click) -> alert($el.innerText)">Default header</h2>
     <ul style="border-bottom: 1px solid gray; padding-bottom: 1rem;">
       <li><a href="https://www.google.com">Link 1</a></li>
       <li><a href="https://www.amazon.com">Link 2</a></li>
       <li><a href="https://www.precisionplanting.com">Link 3</a></li>
       <li><a href="/">Home</a></li>
-      <li><a href="/tests/link1.html" data-fetch="on(click) /tests/link1.html -> header > nav">Internal Link 1</a></li>
+      <li><a href="/tests/link1.html" data-fetch="on(click) -> /tests/link1.html -> header > nav">Internal Link 1</a></li>
       <li><a href="link2.html">Internal Link 2</a></li>
       <li><a href="link3.html">Internal Link 3</a></li>
     </ul>
