Working script include

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -114,7 +114,7 @@
   </nav>
 
   <div class="trans" data-mf_Bind="$fn.specialStyling($st.store1, $el)"></div>
-  <a href="tests/header.html" data-mf_promote data-mf_pushstate="whatevs" data-mf_outer="header" data-mf_fetch_externals='[{"domain": "http://localhost", "scripts": true, "styles": true}]'>TO HEADER</a>
+  <a href="tests/header.html" data-mf_promote data-mf_pushstate="whatevs" data-mf_outer="header" data-mf_fetch_externals='[{"domain": "$origin", "scripts": "all", "styles": "selected"}]'>TO HEADER</a>
 
   <!-- Store script -->
   <script src="./tests/interactive.js" type="module"></script>
