Working component system scaffold

--- a/tests/header.html
+++ b/tests/header.html
@@ -11,6 +11,12 @@
       <li><a href="link2.html">Internal Link 2</a></li>
       <li><a href="link3.html">Internal Link 3</a></li>
     </ul>
+    <style>
+      li:nth-of-type(3) {
+        color: yellow;
+        a { color: yellow }
+      }
+    </style>
 </header>
 
 <script>
@@ -21,7 +27,7 @@
 <style>
   h2 {
     margin-top: 0;
-    color: red;
+    color: red !important;
   }
   ul {
     font-size: .5rem;
