--- a/tests/mycomponent.html
+++ b/tests/mycomponent.html
@@ -9,4 +9,10 @@
         <div>Store 1: $:{s}</div>
     </div>
     <slot></slot>
+
+    <style>
+        div {
+            color: red;
+        }
+    </style>
 </template>
