Working bind again

--- a/tests/header.html
+++ b/tests/header.html
@@ -1,7 +1,7 @@
 <div class="special">INSERTED!</div>
 
 <header>
-    <h2 data-mf_bind="$st.store1->$el.innerText" data-mf_sync="on(click) -> alert($el.innerText)">Default header</h2>
+    <h2 data-mf-bind="$st.store1->$el.innerText" data-mf-sync="on(click) -> alert($el.innerText)">Default header</h2>
     <ul style="border-bottom: 1px solid gray; padding-bottom: 1rem;">
       <li><a href="https://www.google.com">Link 1</a></li>
       <li><a href="https://www.amazon.com">Link 2</a></li>
