--- a/tests/mycomponent.html
+++ b/tests/mycomponent.html
@@ -5,7 +5,7 @@
 
 <template id="new-component">
     <div>This is my template!!!</div>
-    <div data-mf_templ="$st.store1 as s">
+    <div data-mf-templ="$st.store1 as s">
         <div>Store 1: $:{s}</div>
     </div>
     <slot></slot>
