Templating is solid

--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -8,6 +8,23 @@
   <title>Reactivity Test</title>
 </head>
 <body>
+  <h3>Loop</h3>
+  <mf-templ each="$st.store1 as val, key">
+    <div data-mf-on:click="()=>{ $st.store1[key] = 'OK!'; }" class="clickable">
+      <span>$:{key}: $:{val}</span>
+    </div>
+  </mf-templ>
+
+  <h3>Templ</h3>
+  <mf-templ eval="$st.store1 as val">
+    <div data-mf-on:click="()=>{ $st.store1[key] = 'OK!'; }" class="clickable">
+      <span>$:{val}</span>
+    </div>
+  </mf-templ>
+
+  <p>RAW VAL: <mf-templ eval="$st.store1"></mf-templ></p>
+
+  <h3>Conditionals</h3>
   <mf-templ
     if="()=>{ return $st.store1 == 'OK'; }"
   >
@@ -17,6 +34,14 @@
       <button data-mf-on:click="()=>{ $st.store1 = 'OK'; }">OK</button>
       <button data-mf-on:click="()=>{ $st.store1 = '!OK'; }">!OK</button>
     </nav>
+  </mf-templ>
+  <mf-templ
+    elseif="$st.store1 == 'OK!'"
+  >
+    ELSE IF
+  </mf-templ>
+  <mf-templ else>
+    ELSE
   </mf-templ>
   <!-- <mfld-default data-mf-if="()=>{ return $st.store1 == 'OK'; }" data-mf-trans_dur="[1000, 4000]">
     <div>,/;mn bk,jbbkkjlbikujbuibbbbbbbb</div>
