--- a/tests/interactive.html
+++ b/tests/interactive.html
@@ -53,6 +53,8 @@
     <div>ELSE</div>
   </template> -->
   <!-- Store script -->
+  <button mf-bind="$el.innerHTML = $st.store1" mf-sync="on(click) -> alert($st.store1)" mf-get="on(click) -> /tests/header.html" mf-inner="header">SWAP ME</button>
+  <button mf-post="on(click) -> JSON.stringify({ data: $st.store1 }) -> /tests/header.html" mf-inner="header">POST ME</button>
   <script src="./tests/interactive.js" type="module"></script>
 </body>
 </html>
