--- a/tests/mycomponent.html
+++ b/tests/mycomponent.html
@@ -6,7 +6,7 @@
 <template id="new-component">
     <div>This is my template!!!</div>
     <mf-templ eval="$st.store1 as s">
-        <div>Store 1: $:{s}</div>
+        <div>Store 1: {$s}</div>
     </mf-templ>
     <slot></slot>
 
